--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -10,23 +10,27 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <CalendarView
-            android:id="@+id/calendarView"
+        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+            android:id="@+id/progressionCalendar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="352dp"
+            app:layout_constraintBottom_toTopOf="@+id/doneWorkoutsList"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.483"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0"
+            app:mcv_selectionColor="#2020FF"
+            app:mcv_showOtherDates="all" />
 
-        <sun.bob.mcalendarview.mCalendarView
-            android:layout_width="400dp"
-            android:layout_height="400dp"
-            tools:context=".MainActivity"
-            android:id="@+id/calendar"
-            />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/doneWorkoutsList"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/progressionCalendar" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
