--- a/app/src/main/res/layout/fragment_workout_tasks.xml
+++ b/app/src/main/res/layout/fragment_workout_tasks.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/workoutTaskName"
+            android:id="@+id/doneWorkoutName"
             android:visibility="gone"
             android:layout_width="338dp"
             android:layout_height="39dp"
