--- a/app/src/main/res/layout/workout_task_list_item.xml
+++ b/app/src/main/res/layout/workout_task_list_item.xml
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
-            android:id="@+id/workoutTaskName"
+            android:id="@+id/doneWorkoutName"
             android:layout_width="354dp"
             android:layout_height="36dp"
             android:text="TextView"
