--- a/app/src/main/res/layout/workout_tasks_item.xml
+++ b/app/src/main/res/layout/workout_tasks_item.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.125">
 
         <TextView
-            android:id="@+id/workoutTaskName"
+            android:id="@+id/doneWorkoutName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TextView"
