--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/training_list"
-        android:name="com.example.fitnessapp.TrainingList"
+        android:name="com.example.fitnessapp.WorkoutsList"
         android:label="fragment_training_list"
         tools:layout="@layout/fragment_training_list" >
         <action
@@ -31,15 +31,6 @@
         android:name="com.example.fitnessapp.Settings"
         android:label="fragment_settings"
         tools:layout="@layout/fragment_settings" />
-    <fragment
-        android:id="@+id/workout_tasks"
-        android:name="com.example.fitnessapp.WorkoutTasks"
-        android:label="fragment_workout_tasks"
-        tools:layout="@layout/fragment_workout_tasks" >
-        <argument
-            android:name="workoutId"
-            app:argType="integer" />
-    </fragment>
     <fragment
         android:id="@+id/workoutTasksList"
         android:name="com.example.fitnessapp.WorkoutTasksList"
