--- a/app/src/main/res/layout/done_workout_list_date.xml
+++ b/app/src/main/res/layout/done_workout_list_date.xml
@@ -26,6 +26,7 @@
             android:text="TextView"
             android:textStyle="bold"
             android:textSize="20dp"
+            android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
