--- a/app/src/main/res/layout/done_workout_list_item.xml
+++ b/app/src/main/res/layout/done_workout_list_item.xml
@@ -25,10 +25,13 @@
             android:layout_height="36dp"
             android:text="TextView"
             android:textSize="20dp"
+            android:paddingStart="5dp"
+            android:paddingLeft="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.487" />
+            app:layout_constraintVertical_bias="0.487"
+             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
