--- a/app/src/main/res/layout/workout_list_item.xml
+++ b/app/src/main/res/layout/workout_list_item.xml
@@ -7,9 +7,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
-        android:layout_height="75dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="100dp"
         android:layout_marginStart="7dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="7dp"
         android:background="@drawable/rounded_window_red"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -20,15 +20,41 @@
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
-            android:id="@+id/doneWorkoutName"
-            android:layout_width="360dp"
+            android:id="@+id/workoutTotalTasks"
+            android:layout_width="260dp"
             android:layout_height="36dp"
             android:text="TextView"
             android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.115"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.487" />
+            app:layout_constraintVertical_bias="0.796" />
+
+        <TextView
+            android:id="@+id/doneWorkoutName"
+            android:layout_width="260dp"
+            android:layout_height="36dp"
+            android:text="TextView"
+            android:textSize="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.115"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.234" />
+
+        <Button
+            android:id="@+id/editWorkout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/red"
+            android:text="Edit"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.947"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
