--- a/app/src/main/res/layout/done_workout_list_item.xml
+++ b/app/src/main/res/layout/done_workout_list_item.xml
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
-            android:id="@+id/doneWorkoutName"
+            android:id="@+id/doneWorkoutTaskName"
             android:layout_width="360dp"
             android:layout_height="36dp"
             android:text="TextView"
