--- a/app/src/main/res/layout/workout_list_item.xml
+++ b/app/src/main/res/layout/workout_list_item.xml
@@ -33,7 +33,7 @@
             app:layout_constraintVertical_bias="0.796" />
 
         <TextView
-            android:id="@+id/doneWorkoutName"
+            android:id="@+id/doneWorkoutTaskName"
             android:layout_width="260dp"
             android:layout_height="36dp"
             android:text="TextView"
