--- a/app/src/main/res/layout/workout_list_item.xml
+++ b/app/src/main/res/layout/workout_list_item.xml
@@ -7,7 +7,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="7dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="7dp"
@@ -20,30 +20,37 @@
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
-            android:id="@+id/workoutTotalTasks"
-            android:layout_width="260dp"
-            android:layout_height="36dp"
+            android:id="@+id/doneWorkoutTaskName"
+            android:layout_width="wrap_content"
+            app:layout_constraintWidth_max="260dp"
+            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content"
             android:text="TextView"
             android:textSize="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.115"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.796" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.05"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/workoutTotalTasks"
+            app:layout_constraintVertical_bias="0.234" />
 
         <TextView
-            android:id="@+id/doneWorkoutTaskName"
-            android:layout_width="260dp"
-            android:layout_height="36dp"
+            android:id="@+id/workoutTotalTasks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:text="TextView"
             android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.115"
+            app:layout_constraintHorizontal_bias="0.047"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.234" />
+            app:layout_constraintTop_toBottomOf="@+id/doneWorkoutTaskName"
+            app:layout_constraintVertical_bias="0.145"
+            app:layout_constraintWidth_max="260dp" />
+
+
 
         <Button
             android:id="@+id/editWorkout"
