--- a/app/src/main/res/layout/workout_task_list_item.xml
+++ b/app/src/main/res/layout/workout_task_list_item.xml
@@ -11,7 +11,7 @@
         android:layout_marginEnd="7dp"
         android:background="@drawable/rounded_window_orange"
         android:layout_width="0dp"
-        android:layout_height="125dp"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -20,43 +20,53 @@
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
-            android:id="@+id/doneWorkoutTaskTotalSets"
-            android:layout_width="260dp"
-            android:layout_height="36dp"
+            android:id="@+id/doneWorkoutTaskName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="TextView"
             android:textSize="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="10dp"
+            app:layout_constraintBottom_toTopOf="@+id/doneWorkoutTaskTotalSets"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.115"
+            app:layout_constraintHorizontal_bias="0.05"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.494" />
+            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintWidth_max="260dp" />
+
 
         <TextView
-            android:id="@+id/doneWorkoutTaskName"
-            android:layout_width="260dp"
-            android:layout_height="36dp"
+            android:id="@+id/doneWorkoutTaskTotalSets"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:text="TextView"
             android:textSize="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/doneWorkoutTaskTotalRepetitions"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.115"
+            app:layout_constraintHorizontal_bias="0.05"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.078" />
+            app:layout_constraintTop_toBottomOf="@+id/doneWorkoutTaskName"
+            app:layout_constraintVertical_bias="0.5"
+            app:layout_constraintWidth_max="260dp" />
 
         <TextView
             android:id="@+id/doneWorkoutTaskTotalRepetitions"
-            android:layout_width="260dp"
-            android:layout_height="36dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:text="TextView"
             android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.115"
+            app:layout_constraintHorizontal_bias="0.05"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/doneWorkoutTaskTotalSets"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.898" />
+            app:layout_constraintVertical_bias="1.0"
+            app:layout_constraintWidth_max="260dp" />
 
         <Button
             android:id="@+id/editWorkoutTaskListItem"
