--- a/app/src/main/res/layout/workout_list_item.xml
+++ b/app/src/main/res/layout/workout_list_item.xml
@@ -24,6 +24,7 @@
             android:layout_width="wrap_content"
             app:layout_constraintWidth_max="260dp"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
             android:layout_height="wrap_content"
             android:text="TextView"
             android:textSize="20dp"
@@ -38,13 +39,13 @@
             android:id="@+id/workoutTotalTasks"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_marginBottom="10dp"
             android:text="TextView"
             android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.047"
+            app:layout_constraintHorizontal_bias="0.05"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/doneWorkoutTaskName"
             app:layout_constraintVertical_bias="0.145"
