Adaptive text size. Editing after moving bug fix.

--- a/app/src/main/res/layout/fitness_list_item.xml
+++ b/app/src/main/res/layout/fitness_list_item.xml
@@ -7,7 +7,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="110dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="7dp"
         android:layout_marginRight="30dp"
@@ -20,11 +20,14 @@
 
         <TextView
             android:id="@+id/repetitionsNum"
-            android:layout_width="207dp"
-            android:layout_height="34dp"
+            app:layout_constraintWidth_max="210dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="TextView"
             android:textSize="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintBottom_toTopOf="@+id/restNum"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.062"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,27 +36,31 @@
 
         <TextView
             android:id="@+id/restNum"
-            android:layout_width="207dp"
-            android:layout_height="34dp"
+            app:layout_constraintWidth_max="210dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="TextView"
             android:textSize="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/weightNum"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.062"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/repetitionsNum" />
 
         <TextView
             android:id="@+id/weightNum"
-            android:layout_width="207dp"
-            android:layout_height="34dp"
+            app:layout_constraintWidth_max="210dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="TextView"
             android:textSize="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.062"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/restNum"
             app:layout_constraintVertical_bias="0.947" />
 
         <Button
