--- a/app/src/main/res/layout/fragment_fitness.xml
+++ b/app/src/main/res/layout/fragment_fitness.xml
@@ -14,17 +14,18 @@
         <Spinner
             android:id="@+id/workoutsSpinner"
             android:layout_width="275dp"
-            android:layout_height="63dp"
+            app:layout_constraintHeight_min="65dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="3dp"
             android:background="@drawable/rounded_window_green"
             android:dropDownSelector="@color/blue"
             android:popupBackground="@color/green"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.117"
+            app:layout_constraintEnd_toStartOf="@+id/startWorkoutButton"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.761"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="12dp"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/startWorkoutButton"
@@ -32,10 +33,12 @@
             android:layout_height="48dp"
             android:backgroundTint="@color/green"
             android:text="Start"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.95"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/workoutsSpinner"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.028" />
 
