--- a/app/src/main/res/layout/fragment_workout_tasks_list.xml
+++ b/app/src/main/res/layout/fragment_workout_tasks_list.xml
@@ -29,7 +29,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/navigationBarInWorkoutTasks"
             android:layout_width="match_parent"
-            android:layout_height="58dp"
+            android:layout_height="wrap_content"
             android:layout_margin="7dp"
             android:background="@drawable/rounded_window_blue"
             app:layout_constraintBottom_toBottomOf="@+id/workoutTasksList"
@@ -42,6 +42,10 @@
                 android:textSize="20dp"
                 android:textStyle=""
                 android:layout_width="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:layout_height="wrap_content"
                 android:text="TextView"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -160,7 +164,7 @@
                 android:layout_width="95dp"
                 android:layout_height="43dp"
                 android:backgroundTint="@color/orange"
-                android:text="Add"
+                android:text="Edit"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.167"
