--- a/app/src/main/res/layout/fragment_workouts_list.xml
+++ b/app/src/main/res/layout/fragment_workouts_list.xml
@@ -19,7 +19,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="@layout/workout_list_item" />
+            tools:listitem="@layout/workout_list_item"
+            android:splitMotionEvents="false"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/addButton"
